# testDD

./: .cproject  .gitignore  CMakeLists.txt  main.cpp
Parallel/: CMakeLists.txt  MPI.cpp  fftw3mpi.cpp  fftw3mpi.h
pfft/: .gitignore
pfft/doc/: .gitignore
pfft/tests/: bench_c2c.c  bench_c2c_old.c  simple_check_c2c_3d_on_3d.c  simple_check_ghost_c2c_3d_on_3d.c  simple_check_r2c_3d_on_3d_transposed.c  simple_check_r2c_newarray.c
testDD/: .project  main.cpp
